# vstattempt

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setup.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
